fixed wizard image

--- a/src/template.html
+++ b/src/template.html
@@ -280,7 +280,7 @@
               <div class="project-wrapper__image">
                 <a href="https://floware.itch.io/dave-the-wizard" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/wizard.PNG" />
+                    <img class="img-fluid" src="./assets/wizard.png" />
                   </div>
                 </a>
               </div>
