added piano agent

--- a/src/template.html
+++ b/src/template.html
@@ -94,7 +94,7 @@
                     This is a react project created for a drone film studio
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://skyder-web.netlify.app/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://skyder.axolotelabs.com/">
                   See Live
                 </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/skyder">
@@ -104,7 +104,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://skyder-web.netlify.app/" target="_blank">
+                <a href="https://skyder.axolotelabs.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/skyder.png" />
                   </div>
@@ -117,7 +117,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Website -Axolotelabs</h3>
+                <h3 class="project-wrapper__text-title">Website - Axolotelabs</h3>
                 <div>
                   <p class="mb-4">
                     This is a react project created for a software developer company
@@ -281,6 +281,35 @@
                 <a href="https://floware.itch.io/dave-the-wizard" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/wizard.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Ml-agents - Ai piano player</h3>
+                <div>
+                  <p class="mb-4">
+                    This is a unity 2d project piano that reads a set of notes to play and then re produce the song itself.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://alphainvicta.itch.io/ai-piano-player">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/DanielKyjas/PianoIA">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://alphainvicta.itch.io/ai-piano-player" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/AiPiano.png" />
                   </div>
                 </a>
               </div>
