added modern times vr

--- a/src/template.html
+++ b/src/template.html
@@ -316,6 +316,35 @@
             </div>
           </div>
           <!-- /END Project -->
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Unity - Modern Times VR</h3>
+                <div>
+                  <p class="mb-4">
+                    This is a unity vr game project that use a custom light and the basic vr controller to make a fast pace experience.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://alphainvicta.itch.io/modern-times-vr">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/FloWareR/ThisAssemblyLine">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://alphainvicta.itch.io/modern-times-vr" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/ModernTimes.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
         </div>
       </div> 
     </section> 
