--- a/src/template.html
+++ b/src/template.html
@@ -61,8 +61,9 @@
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
                 "Modern ideas required modern solutions" 💡<br/> <br/>
-                 Senior front end developer using technologies for web and videogames like React and Unity <br/> <br/>
-                Have a look at my resume to meet my main skills.
+                Proeficient in front end development using React and Javascript, I have also worked with Unity, Python, Unreal and play with other tools like Ml-agents, VR development, Automated bots and more. <br/> <br/>
+                A native passion for learning and always looking for new challenges to overcome. <br/> <br/>
+
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1cRi4QGWHB4OUql1P45Zy0mVLlUoKSDDR/view?usp=sharing">
@@ -91,7 +92,8 @@
                 <h3 class="project-wrapper__text-title">Website - Skyder</h3>
                 <div>
                   <p class="mb-4">
-                    This is a react project created for a drone film studio
+                    This is a website project created for a drone film studio. <br/> <br/>
+                    This project was created using Javascript and React for front-end, Php for the Back end and Mysql for the database all stored at Hostinger.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://skyder.axolotelabs.com/">
@@ -120,7 +122,8 @@
                 <h3 class="project-wrapper__text-title">Website - Axolotelabs</h3>
                 <div>
                   <p class="mb-4">
-                    This is a react project created for a software developer company
+                    This is a website project created for a software developer company. <br/> <br/>
+                    This project was created using Javascript and React for front-end, Php for the Back end and Mysql for the database all stored at Hostinger.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="axolotelabs.com">
@@ -149,7 +152,8 @@
                 <h3 class="project-wrapper__text-title">Video game - Fish Flex</h3>
                 <div>
                   <p class="mb-4">
-                    This is a unity Top down 2D game project created
+                    This is a Top down 2D game project. <br/> <br/>
+                    This project was created using Unity as the game engine thus making C# as the main language for the game logic.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://floware.itch.io/fish-flex">
@@ -178,7 +182,8 @@
                 <h3 class="project-wrapper__text-title">Video game - Minecrack</h3>
                 <div>
                   <p class="mb-4">
-                    This is a three js website project created to learn how to use three js
+                    This is a website project created to learn how to use a 3d library. <br/> <br/>
+                    This project was created using Vite, React and Javascript for all the website logic, plus the adition of Threejs as the 3d library.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://unidad2examenglobal.netlify.app/">
@@ -207,7 +212,8 @@
                 <h3 class="project-wrapper__text-title">Python - Binance bot</h3>
                 <div>
                   <p class="mb-4">
-                    This is a python project to test api calls, websocket connections, nosql databases, multiprocessing and threading using kline data from binance
+                    This is a bot project to use on the binance platform. <br/> <br/>
+                    This project was created using Python to easily make api calls, websocket connections, nosql databases, multiprocessing and threading using kline data.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://binance.com">
@@ -236,7 +242,8 @@
                 <h3 class="project-wrapper__text-title">Video game - Draw!</h3>
                 <div>
                   <p class="mb-4">
-                    This is a unity Vr game project using low poly assets from the wild west
+                    This is a Vr game project using low poly assets from the wild west. <br/> <br/>
+                    This project was created using Unity as the game engine thus making C# as the main language for the game logic.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://floware.itch.io/draw">
@@ -265,7 +272,8 @@
                 <h3 class="project-wrapper__text-title">Video game - Dave the wizard</h3>
                 <div>
                   <p class="mb-4">
-                    This is a unity 3d game project that is a mix of tower defence and an action survival
+                    This is a game project that is a mix of tower defence and an action survival. <br/> <br/>
+                    This project was created using Unity as the game engine thus making C# as the main language for the game logic.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://floware.itch.io/dave-the-wizard">
@@ -294,7 +302,8 @@
                 <h3 class="project-wrapper__text-title">Ml-agents - Ai piano player</h3>
                 <div>
                   <p class="mb-4">
-                    This is a unity 2d project piano that reads a set of notes to play and then re produce the song itself.
+                    This is a piano that reads a set of notes to play and then re produce the song itself. <br/> <br/>
+                    This project was created using Unity as the game engine thus making C# as the main language for the game logic. But also it needed Python with Conda to train the model.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://alphainvicta.itch.io/ai-piano-player">
@@ -323,7 +332,8 @@
                 <h3 class="project-wrapper__text-title">Unity - Modern Times VR</h3>
                 <div>
                   <p class="mb-4">
-                    This is a unity vr game project that use a custom light and the basic vr controller to make a fast pace experience.
+                    This is a Vr game project that use a custom light and the basic Vr controller to make a fast pace experience. <br/> <br/>
+                    This project was created using Unity as the game engine thus making C# as the main language for the game logic.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://alphainvicta.itch.io/modern-times-vr">
