--- a/src/template.html
+++ b/src/template.html
@@ -346,6 +346,63 @@
             </div>
           </div>
           <!-- /END Project -->
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Website - SportGestion</h3>
+                <div>
+                  <p class="mb-4">
+                    This is website project created for a sports business solution related company. <br/> <br/>
+                    This project was created using Javascript and React for front-end, Php for the Back end all stored at Hostinger.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://sportgestion.mx/">
+                  See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://sportgestion.mx/" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/SportGestion.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Website - Julio Portfolio</h3>
+                <div>
+                  <p class="mb-4">
+                    This is a website project created as a portfolio template for Julio and others. <br/> <br/>
+                    This project was created using Javascript and React for front-end, doesn't have any back end so it can be used anywhere.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://refered.netlify.app/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/Julio_portfolio">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="hhttps://refered.netlify.app/" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/JulioPortfolio.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
         </div>
       </div> 
     </section> 
