--- a/src/template.html
+++ b/src/template.html
@@ -394,7 +394,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="hhttps://refered.netlify.app/" target="_blank">
+                <a href="https://refered.netlify.app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/JulioPortfolio.png" />
                   </div>
